# realtime-stream

./: .gitignore  CMakeLists.txt  README.md  SCRIPT.md  config.yaml  setup.bash  setup.sh  thread.md
include/: app_config.h  camera.h  streamer.h
src/: CMakeLists.txt  camera.cpp  main.cpp
src/app/: CMakeLists.txt  app_config.cpp  main.cpp
src/camera/: CMakeLists.txt  camera.cpp
src/stream/: CMakeLists.txt  streamer.cpp
test/: cameras.cpp  capture_yuv.cpp  pixelFormat.cpp  v4l2.cpp
test/libcamera/: 1_libcamera.cpp  2_acquired-only.cpp  3_configure.cpp  4_allocate_buffers.cpp  5_capture_frame.cpp  6_capture_streaming.cpp  script.txt
test/testtaolao/: array.cpp  h.cpp  lambda.cpp  range_based_for_loop.cpp
